--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,3 @@
-
 :root {
     --dark: rgb(28, 28, 28);
     --light: rgb(237, 237, 237);
@@ -6,80 +5,102 @@
     --darkgrey: rgb(61, 61, 61);
     overscroll-behavior: none;
 
-  }  
+}
 
-  * {
+* {
     margin: 0;
-  }
+}
 
-  img {
+img {
     max-width: 100%;
     z-index: 2;
-  }
+}
 
-  ul {
+ul {
     margin: 1rem 0 0 0;
     display: flex;
     flex-direction: column;
-gap: 1rem;
-  }
+    gap: 1rem;
+}
 
-  li {
+li {
     font-size: .875em;
-  }
+}
 
-  .grey {
+strong {
+    font-weight: 600;
+}
+
+.grey {
     color: var(--grey)
-  }
+}
 
-  .rounded {
+.rounded {
     border-radius: 5px;
-  }
+}
 
-  p {
-    box-shadow:#222222
-  }
+p {
+    line-height: 1.6em;
+    box-shadow: #222222
+}
 
-  html {
+html {
     overscroll-behavior: none;
 
     background-color: #333333;
-  }
+}
 
-  h1, h2 {
+h1,
+h2 {
     padding: 1rem 0;
     font-weight: 600;
-    font-size:2rem;
-  }
+    font-size: 2rem;
+}
 
-  h3 {
+h3 {
     padding: 3rem 0 1rem 0;
     font-weight: 400;
     font-size: 1em;
     color: var(--grey);
     text-transform: uppercase;
-  }
-
-
-  .dynamic-container {
-    min-height: 300px; /* Adjust based on your average content height */
 }
 
-        .glow-cursor {
-            position: fixed;
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            background: radial-gradient(circle, rgba(255,255,255,0.25) 0%, rgba(255,255,255,0) 70%);
-            pointer-events: none; /* Make sure it doesn't interfere with clicking */
-            transform: translate(-50%, -50%);
-            z-index: 9999;
-            mix-blend-mode: lighten; /* This makes the glow blend with the background */
-            transition: opacity 0.3s ease; /* Smooth fade when the cursor enters/exits the window */
-            opacity: 0;
-        }
 
-  
+
+
+.dynamic-container {
+    min-height: 800px;
+    /* Adjust based on your average content height */
+}
+
+.dynamic-container p {
+    max-width: 75%;
+
+}
+
+
+.flex-row p {
+    max-width: none;
+}
+
+.glow-cursor {
+    position: fixed;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    background: radial-gradient(circle, rgba(255, 255, 255, 0.25) 0%, rgba(255, 255, 255, 0) 70%);
+    pointer-events: none;
+    /* Make sure it doesn't interfere with clicking */
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+    mix-blend-mode: lighten;
+    /* This makes the glow blend with the background */
+    transition: opacity 0.3s ease;
+    /* Smooth fade when the cursor enters/exits the window */
+    opacity: 0;
+}
+
+
 
 /* Base Styles */
 body {
@@ -94,7 +115,8 @@ body {
     background-image: url('../images/dark-wall.png');
     background-repeat: repeat;
     background-size: auto;
-    background-attachment: fixed;  /* This keeps the background static while scrolling */
+    background-attachment: fixed;
+    /* This keeps the background static while scrolling */
 }
 
 
@@ -158,7 +180,8 @@ body {
     display: grid;
     grid-template-columns: 1fr 3fr;
     grid-template-rows: auto auto;
-    gap: 1rem; /* optional spacing */
+    gap: 1rem;
+    /* optional spacing */
 }
 
 .highlight-grid {
@@ -225,7 +248,7 @@ body {
 
 /* Project Index */
 .index {
-    display: grid;
+    display: flex;
     grid-template-columns: 1fr 1fr;
     flex-direction: column;
     gap: 1rem;
@@ -236,25 +259,26 @@ body {
     /* padding: 20px; */
     cursor: pointer;
     transition: box-shadow 0.3s;
-    display: flex;
+    display: grid;
     flex-direction: column;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 1rem;
     border-radius: 5px;
+    padding: 1rem;
     /* width: 100%; */
 }
 
 .item-1 {
     display: flex;
     flex-direction: column;
-    gap:0.5rem;
+    gap: 0.5rem;
     margin-bottom: 10px;
     padding: 1rem;
 }
 
 .item-title {
     font-weight: bold;
-    /* font-weight: bold; */
+    font-size: 1.5rem;
     /* font-size: 1.1rem; */
 }
 
@@ -281,6 +305,7 @@ body {
     border-radius: 4px;
     font-size: 0.8rem;
     color: white;
+    background-color: rgba(255, 255, 255, 0.146);
     font-weight: 500;
 }
 
@@ -306,7 +331,7 @@ body {
 }
 
 /* Responsive adjustments */
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
     .nav {
         flex-direction: column;
         align-items: flex-start;
@@ -321,11 +346,10 @@ body {
     .index {
         grid-template-columns: 1fr;
     }
-}
+} */
 
 /* About Section */
-#about-section {
-}
+#about-section {}
 
 .faded {
     opacity: 0.5;
@@ -336,23 +360,27 @@ body {
     width: 500px;
     height: 500px;
     border-radius: 50%;
-    background: radial-gradient(circle, rgba(255,255,255,0.25) 0%, rgba(255,255,255,0) 70%);
-    pointer-events: none; /* Make sure it doesn't interfere with clicking */
+    background: radial-gradient(circle, rgba(255, 255, 255, 0.25) 0%, rgba(255, 255, 255, 0) 70%);
+    pointer-events: none;
+    /* Make sure it doesn't interfere with clicking */
     transform: translate(-50%, -50%);
     z-index: 9999;
-    transition: opacity 0.3s ease; /* Smooth fade when the cursor enters/exits the window */
+    transition: opacity 0.3s ease;
+    /* Smooth fade when the cursor enters/exits the window */
     opacity: 0;
 }
 
 .mark {
     width: 20px;
-    transform-origin: center; /* Change the axis of rotation */
+    transform-origin: center;
+    /* Change the axis of rotation */
 
 }
 
 .project-item:hover {
     background-color: rgba(255, 255, 255, 0.073);
-    backdrop-filter: blur(5px); /* blur the background */
+    backdrop-filter: blur(5px);
+    /* blur the background */
 
 }
 
@@ -364,8 +392,9 @@ body {
 } */
 
 /* Add a smooth transition for all hover effects */
-.project-item, .project-item * {
-  transition: all 0.3s ease;
+.project-item,
+.project-item * {
+    transition: all 0.3s ease;
 }
 
 
@@ -374,7 +403,7 @@ body {
     position: fixed;
     opacity: 0.05;
     top: 80px;
-    transform:translateX(300px);
+    transform: translateX(300px);
 
 
 }
