--- a/styles/styles.css
+++ b/styles/styles.css
@@ -214,9 +214,9 @@ body {
     display: grid;
     grid-template-columns: 1fr 3fr;
     grid-template-rows: auto auto;
-    backdrop-filter: blur(1px);
+    backdrop-filter: blur(5px);
 
-    background-color: var(--darkgrey);
+    background-color: rgba(64, 64, 64, 0.513);
     gap: 1rem;
     border-radius: 5px;
     padding: 2rem;
@@ -447,4 +447,28 @@ body {
     transform: translateX(300px);
 
 
+}
+
+
+.back-to-projects-container {
+    display: none;
+    justify-content: center;
+    margin-top: 120px;
+    margin-bottom: 20px;
+}
+
+.back-to-projects-btn {
+    color: white;
+    padding: 20px 30px;
+    background-color: #464646;
+    border: 1px solid #a4a4a4;
+    border-radius: 30px;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 800;
+    transition: background-color 0.3s;
+}
+
+.back-to-projects-btn:hover {
+    background-color: #6e6e6e;
 }
